# Hashmind

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
models/: README.md
samples/: README.md
scripts/: generate_training_data.py  train_model.py
src/: __init__.py  cli.py  decoder.py  identifier.py  threshold_tuner.py
src/core/: __init__.py  analyzers.py  detector.py  matchers.py  normalizer.py
src/features/: __init__.py  algorithmic.py  extractor.py  statistical.py  structural.py
src/ml/: __init__.py  active_learner.py  classifier.py  confidence.py
tests/: test_cli.py  test_core.py  test_identifier.py
tests/vectors/: README.md
